--- a/c_code/b_layout_test/css/base/common.css
+++ b/c_code/b_layout_test/css/base/common.css
@@ -16,3 +16,13 @@
   position: absolute; z-index:-1;
   width: 0; height: 0;
   overflow: hidden;}
+
+.hidden_wrap a {
+  display: block; width: 100%; height: 100%; background-repeat: no-repeat;}
+.hidden_wrap button {
+  display: block; width: 100%; height: 100%; }
+
+.hidden_wrap a > span,
+.hidden_wrap button > span {
+  display: block; position: absolute; z-index:-1;
+  width: 0; height: 0; overflow: hidden;}
