쿠팡로그인페이지 가이드세팅

--- a/c_code/b_layout_test/css/src/login_layout_01.css
+++ b/c_code/b_layout_test/css/src/login_layout_01.css
@@ -82,3 +82,5 @@ input::placeholder { color:#fac; }
   }
   .join_and_find a:first-of-type {
     margin-right:15px;  }
+
+    #testCheck:checked + label > i{color:#f07;}
