--- a/c_code/b_layout_test/css/base/reset.css
+++ b/c_code/b_layout_test/css/base/reset.css
@@ -5,9 +5,27 @@
 html,body {margin:0;}
 h1, h2, h3, h4, h5, h6, p, div { margin:0; padding:0; }
 ul,ol,li,dl,dt,dd {margin:0; padding:0; list-style:none;}
-button { margin:0; padding:0; border:0; 
-         background-color: transparent; cursor:pointer; }
+
 a { text-decoration:none; color:inherit; }
 
 hr {width:100%; height:0;
-    border-bottom:2px solid #333;}
+    border:0; margin:0;
+    border-bottom:1px solid #333;}
+
+/* form영역 */
+form,fieldset{ margin:0; padding:0; border:0; }
+legend { display: block; position: absolute; z-index: -1; 
+    width: 0; height: 0; overflow: hidden;}
+
+input[type="text"], input[type="password"],input[type="search"],
+input[type="email"], input[type="url"], input[type="number"],
+input[type="tel"] {
+    border:1px solid #777; box-sizing: border-box;
+    text-indent:0.5rem; cursor: pointer;}
+
+button,
+input[type="button"], input[type="submit"], input[type="reset"], 
+input[type="image"] { margin:0; padding:0; border:0; 
+    background-color: transparent; cursor:pointer; }
+
+textarea,select { margin:0; padding:0; border:1px solid #777; box-sizing:border-box;}
