--- a/c_code/b_layout_test/css/src/login_layout_02.css
+++ b/c_code/b_layout_test/css/src/login_layout_02.css
@@ -18,8 +18,46 @@
   /* #loginBox======================== */
   #loginBox{
     width:460px; height:auto; min-height:200px;
-    margin:auto; margin-bottom:20px;
+    margin:auto; margin-bottom:20px;}
+
+  form {
+    width:100%; height:auto; margin-bottom:18px}
+
+  form + hr {
+    margin-bottom:18px; } 
+
+  fieldset { 
+    width:100%; height:auto; min-height:20px;
+    margin-bottom:14px;
     background-color: #fff;}
+  fieldset:last-of-type {margin-bottom: 0;}
+
+  .login_info ul{ width: 100%; height:auto; }
+  .login_info ul>li{ width: 100%; height:auto;}
+  .input_wrap {width: 100%; height:auto; border:1px solid #777; box-sizing:border-box;}
+  .login_info label:first-of-type{ 
+    float:left; width:45px; height:48px; 
+    border-right:1px solid #777; background-color: #ddd;}
+  .login_info input:first-of-type {
+     float:left; height:48px; border:0; }
+  .login_info ul>li:nth-child(1) input{ width:410px; }
+  .login_info ul>li:nth-child(2) input{ width:367px; }
+    
+  /* -------------- */
+
+  .join_link {
+    width: 100%; height: 54px;
+  }
+  .join_link > a {
+    display: block; width: 100%; height: 100%; 
+    border:1px solid #777;
+    border-radius:2px;
+    box-shadow:0 1px 0 #555;
+    text-align: center; line-height:54px;
+    font-size:1.125rem; color:#0074e9;
+    font-weight: 900;
+    background-color: #fff;
+  }
 
   /* #footBox======================== */
   #footBox{
