--- a/c_code/b_layout_test/css/src/login_layout_02.css
+++ b/c_code/b_layout_test/css/src/login_layout_02.css
@@ -33,7 +33,11 @@
   fieldset:last-of-type {margin-bottom: 0;}
 
   .login_info ul{ width: 100%; height:auto; }
-  .login_info ul>li{ width: 100%; height:auto;}
+  .login_info ul>li{ 
+    width: 100%; height:auto; margin-bottom:13px;  
+    line-height:16px; font-size:1rem;}
+  .login_info ul>li:last-child{margin-bottom: 0;}
+
   .input_wrap {width: 100%; height:auto; border:1px solid #777; box-sizing:border-box;}
   .login_info label:first-of-type{ 
     float:left; width:45px; height:48px; 
@@ -41,13 +45,15 @@
   .login_info input:first-of-type {
      float:left; height:48px; border:0; }
   .login_info ul>li:nth-child(1) input{ width:410px; }
-  .login_info ul>li:nth-child(2) input{ width:367px; }
-    
+  .login_info ul>li:nth-child(2) input{ width:365px; }
+  label[for="checkPw"]{ 
+    float:right; width:46px; height:48px; cursor:pointer; background-color: #fcc; }
+  #checkPw:checked + label { background-color: #acf; }
+
   /* -------------- */
 
   .join_link {
-    width: 100%; height: 54px;
-  }
+    width: 100%; height: 54px;}
   .join_link > a {
     display: block; width: 100%; height: 100%; 
     border:1px solid #777;
