--- a/c_code/b_layout_test/css/base/reset.css
+++ b/c_code/b_layout_test/css/base/reset.css
@@ -2,8 +2,9 @@
 /* reset.css: 
 웹페이지 디자인작업을위해, 
 매번 처리해야하는 번거로운 작업을 미리 설정하여 초기화 시키는 처리 */
-html,body {margin:0;}
-h1, h2, h3, h4, h5, h6, p, div { margin:0; padding:0; }
+:root{font-size: 16px;}
+html,body {margin:0; font-family: notoSansKR, serif; font-weight: 400;}
+h1, h2, h3, h4, h5, h6, p, div, img,pre { margin:0; padding:0; border:0; font-size:1rem; }
 ul,ol,li,dl,dt,dd {margin:0; padding:0; list-style:none;}
 
 a { text-decoration:none; color:inherit; }
@@ -11,6 +12,8 @@ a { text-decoration:none; color:inherit; }
 hr {width:100%; height:0;
     border:0; margin:0;
     border-bottom:1px solid #333;}
+address { font-style: normal;}
+abbr{ text-decoration: none;}
 
 /* form영역 */
 form,fieldset{ margin:0; padding:0; border:0; }
