--- a/c_code/b_layout_test/css/src/sdf_web/b_header.css
+++ b/c_code/b_layout_test/css/src/sdf_web/b_header.css
@@ -7,10 +7,41 @@
   width: 100%; height:8rem; padding-top:2.75rem; box-sizing:border-box; background-color: #aaa;}
 
   .head_area{
-    width: 100%; height:5.25rem; background-color: #000; }
-  h1{}
+    position: relative;
+    width: 100%; height:5.25rem; padding:1.25rem 2.125rem; box-sizing:border-box; background-color: #000; }
+  h1{ 
+    float:left; width:6.5625rem; height:2.8125rem; background-color: #fa0;}
+  #gnbBox{
+    position:absolute; top:1.25rem; left:50%; transform:translateX(-50%);
+    width:65%; height:2.8125rem;}
+    .title_link { width:100%; height:auto; text-align: center; white-space: nowrap;} 
+    .title_link > li {position:relative; display:inline-block; height:2.8125rem; margin-right:1%;} 
+    .title_link > li:last-child {margin-right: 0;}
+    .title_link > li > a {
+      padding:10px; font-size:1.25rem; line-height:2.8125rem;
+      color:#fff;} 
+
+    .title_link > li::before{ 
+      content:""; display: block; width:2px; height:50%; background-color:rgba(255,255,255,0.5);
+      position: absolute; top:25%; right:-4%; } 
+    .title_link > li:last-child::before{display: none;}
+
+    .sub_link {display: none; position:absolute; left:0; top:100%; padding:10px;
+      background-color: #fff;}
+
+    .title_link > li:hover > .sub_link { display: block;}
+      /* .title_link > li > a:focus {outline:5px solid #f07;}
+      .title_link > li > a:focus + .sub_link { display: block;} */
+  #unbBox{ 
+    float:right; width:10.9375rem; height:2.8125rem; background-color: #fa5;}
   
   .people_lang_area{
     position: absolute; top: 0; left: 0;
     width:100%; height:2.75rem; border-bottom:0.0625rem solid #a4a4a4; box-sizing: border-box;
     background-color: #fa0;}
+    
+    .vertical_center span { 
+      display:inline-block; position: relative; top: 50%; height:0; }
+    .vertical_center b { position: relative; display:inline-block; 
+                         top:0; transform:translateY(-50%);}
+
