--- a/c_code/b_layout_test/css/base/reset.css
+++ b/c_code/b_layout_test/css/base/reset.css
@@ -4,7 +4,7 @@
 매번 처리해야하는 번거로운 작업을 미리 설정하여 초기화 시키는 처리 */
 :root{font-size: 16px;}
 html,body {
-    margin:0; font-family: sans-serif; line-height:120%; font-weight: 400;
+    margin:0; font-family:'Noto Sans KR', sans-serif; line-height:120%; font-weight: 400;
     vertical-align: baseline;
 }
 h1, h2, h3, h4, h5, h6, p, div, img,pre { margin:0; padding:0; border:0; font-size:1rem; }
