--- a/c_code/a_basic/css/base/reset.css
+++ b/c_code/a_basic/css/base/reset.css
@@ -5,7 +5,7 @@
 
 html,body { 
   width:100%; height:100%;
-  margin: 0; padding: 0; border: 0; font-family:sans-serif; color:#333;}
+  margin: 0; padding: 0; border: 0; font-family:'Noto Sans KR',sans-serif; color:#333;}
 
 h1,h2,h3,h4,h5,h6,
 p,pre,blockquote,q,abbr,address,
