--- a/c_code/a_basic/css/src/shadow.css
+++ b/c_code/a_basic/css/src/shadow.css
@@ -16,3 +16,64 @@
 /* box-shadow: x축 y축 번짐의정도 (두께) 색상; */
 .box li:nth-child(1){ box-shadow:10px 10px 5px #333; }
 .box li:nth-child(2){ box-shadow:0 0 5px 10px #579; }
+.box li:nth-child(3){ box-shadow: 10px -10px 5px #f07 inset;}
+.box li:nth-child(4){ box-shadow:5px 5px 0 #f3f,
+                                 -5px -5px 0 #3f3,
+                                 -3px -5px 0 #5fa inset;}
+.text li{ 
+  width:180px; margin-right:1rem; 
+  font-size:2rem; font-weight: 900; color:#fff;}
+.text li:nth-child(1) { text-shadow:5px 5px 0 #976; }
+.text li:nth-child(2) { text-shadow:-5px 5px 0 #976,
+                                    10px 10px 5px #70a; }
+.text li:nth-child(3) {text-shadow:-1px -1px 1px #555,
+                                    2px 2px 1px #252525;}
+.text li:nth-child(4) { text-shadow:-150px 5px 3px #777;
+                        transition:all 700ms linear; overflow: hidden;}
+.text li:nth-child(4):hover { text-shadow:150px 5px 3px #777;
+                             background-color: #f73;}
+
+.drop li{ background-image: url('../../img/drink.png'); 
+          background-repeat: no-repeat; 
+          background-size: auto 80%; background-position: 50% 50%;
+          font-size: 0; background-color:transparent;}
+.drop li:nth-child(1){ filter:drop-shadow(10px 10px 5px #07a);}
+.drop li:nth-child(2){ filter:blur(0.1rem); }
+.drop li:nth-child(3){ filter:brightness(5); }
+.drop li:nth-child(4){ opacity:50%;}
+.drop li > span {font-size: 2rem;}
+
+.gradient li{ 
+  width:12.5rem; height:12.5rem; border:0.0625rem solid #333;
+  margin-right:1rem;}
+
+.gradient li:nth-child(1){
+  background-color: khaki;
+  background-image:linear-gradient(60deg, khaki 30%, #f70 30%, #fa0 50%, #fca);
+}
+.gradient li:nth-child(2){
+  position: relative; z-index:0; overflow: hidden;
+  background-color:#f7a; transition: all 500ms ease;
+  /* background-image: linear-gradient(#00A, #F00); */
+}
+/* .gradient li:nth-child(2):hover{ 
+  background-color: #acf;
+  background-image:linear-gradient(#faa, #acf);
+} */
+
+
+.gradient li:nth-child(2)::before{
+  display: block;
+  content:" ";  z-index: -1;
+  position: absolute; top: 0; bottom:0; right:0; left: 0; margin:auto; 
+  width: 110%; height: 110%;
+  transition:all 500ms linear;
+  background-image:linear-gradient(90deg, #f7a, #acf);
+  opacity: 1;}
+
+.gradient li:nth-child(2):hover::before { opacity: 0; } 
+
+.gradient li:nth-child(3){
+  width:500px;  background-image: radial-gradient(#f06, #acf);}
+.gradient li:nth-child(4){
+  width:500px;  background-image: radial-gradient(circle closest-side, #acf, #fa9);}
