--- a/c_code/a_basic/css/src/transition.css
+++ b/c_code/a_basic/css/src/transition.css
@@ -134,7 +134,6 @@
   background-repeat: no-repeat; background-size:auto 110%; background-position: 50% 50%;}
 .bg:before{ content:" "; display: block; position: absolute; 
   width: 100%; height: 100%; background-color: rgba(51,51,51,0);}
-
 .bg > dl{ opacity: 0;
   position: absolute; z-index:100; top: 50%; transform:translateY(-50%); left:0; 
   width:100%; height:auto; text-align: center; font-weight: bold; 
@@ -143,9 +142,7 @@
   .bg > dd{ tab-size:2rem;}
 
   :root{ --transition: all 1000ms ease; }
-  .bg, 
-  .bg:before, 
-  .bg dl{transition:var(--transition);}
+  .bg,   .bg:before,   .bg dl{transition:var(--transition);}
 
   .bg:hover{  background-size:auto 130%;}
   .bg:hover:before{ background-color: rgba(51,51,51,0.7);}
