--- a/c_code/c_sample_web/css/base/reset.css
+++ b/c_code/c_sample_web/css/base/reset.css
@@ -5,7 +5,7 @@
 html,body { 
   width:100%; height:100%;
   margin: 0; padding: 0; border: 0; 
-  font-family:Roboto, sans-serif; font-weight: 400;
+  font-family:'Noto Sans KR', Roboto, sans-serif; font-weight: 400;
   color:#333;}
 
 h1,h2,h3,h4,h5,h6,
@@ -25,7 +25,7 @@ header, nav, section, article, footer, aside, main, figure, figcaption{
 
 a { text-decoration: none; color:inherit; }
 button { background-color:transparent; cursor: pointer;}
-hr { border-bottom:1px solid #333;}
+hr {border:none; border-bottom:1px solid #333;}
 
 a:hover, a:focus,
 button:hover, button:focus { 
