--- a/c_code/c_sample_web/css/base/variable.css
+++ b/c_code/c_sample_web/css/base/variable.css
@@ -15,4 +15,15 @@
   --size-title3:24px;
 
   --border-line1:1px solid #333;
+
+
+  --color-monfee-primary:#aa3300;
+  --color-monfee-red:#cc0000;
+  --color-monfee-yellow:#ffaf00;
+  --color-monfee-mint:#33dddd;
+  --color-monfee-black:#171717;
+  --color-monfee-deep-gray:#656565;
+  --color-monfee-light-gray:#bbbbbb;
+  --color-monfee-white:#ffffff;
+
 }
