--- a/c_code/c_sample_web/css/base/variable.css
+++ b/c_code/c_sample_web/css/base/variable.css
@@ -18,6 +18,7 @@
 
 
   --color-monfee-primary:#aa3300;
+  --color-monfee-primary-opacity:rgba(164,51,0,0.7);
   --color-monfee-red:#cc0000;
   --color-monfee-yellow:#ffaf00;
   --color-monfee-mint:#33dddd;
