--- a/c_code/c_sample_web/css/src/monfee_main.css
+++ b/c_code/c_sample_web/css/src/monfee_main.css
@@ -10,7 +10,31 @@
 
 /* #issueBox ---------------------------------------------------------- */
 #issueBox{width:100%; height:auto; min-height:1340px;}
-  .issue_text{width:100%; height:860px; background-color: #caa;}
+  .issue_text{width:100%; height:auto; box-sizing: border-box; 
+    padding-top:265px; padding-bottom:75px;
+    background-color: #caa;}
+
+  .issue_text_area{width:87.3vw; height:auto; min-height:200px; 
+    margin:auto; padding:60px 3vw;
+    background-color:var(--color-monfee-mint-opacity);}
+    .issue_text_area .issue_wrap{width: 100%; height:auto;}
+    .issue_text_area ul{width: 400%; height:auto;}
+    .issue_text_area li{float:left; width:25%; height:auto; min-height:200px;
+      border-right:1px solid #333; box-sizing:border-box; background-color: #fff; }
+      .issue_text_area dl{width: 100%; height:auto;}
+      .issue_text_area dt{font-weight: bold;
+        font-size:1.4rem; text-decoration: underline; margin-bottom:0.7rem;}
+      .issue_text_area dd{
+        margin-bottom:1rem; 
+        font-size:1rem; color:var(--color-monfee-deep-gray);}
+      .issue_text_area dd:last-of-type{
+        width:150px; height:40px; margin-bottom:0; color:#fff; font-weight: bold;}      
+      .issue_text_area a{ 
+        display: block; border-radius:0.3rem;
+        width: 100%; height: 100%; line-height:40px; text-align: center;
+        background-color:var(--color-monfee-red);}
+
+  /* ----------------------------- */
   .issue_icon{width:100%; max-width:1260px; height:480px; margin:auto; background-color: #aca;}
 
 /* #conBox ---------------------------------------------------------- */
