--- a/c_code/c_sample_web/css/base/variable.css
+++ b/c_code/c_sample_web/css/base/variable.css
@@ -22,7 +22,7 @@
   --color-monfee-red:#cc0000;
   --color-monfee-yellow:#ffaf00;
   --color-monfee-mint:#33dddd;
-  --color-monfee-mint-opacity:rgba(51,211,211,0.8);
+  --color-monfee-mint-opacity:rgba(10, 160, 160, 0.9);
   --color-monfee-black:#171717;
   --color-monfee-deep-gray:#656565;
   --color-monfee-light-gray:#bbbbbb;
