인디케이터 가로 슬라이드 클릭시 처리

--- a/c_code/e_jquery/css/base/common.css
+++ b/c_code/e_jquery/css/base/common.css
@@ -12,7 +12,7 @@
 
 .hidden_wrap a>span,
 .hidden_wrap button>span { 
-  display: block; width: 0; height: 0; overflow: hidden;}
+  display: block; position: absolute; z-index:-1; width: 0; height: 0; overflow: hidden;}
 
 .clearfix:after,
 .clearfix::after {content:" "; display: block; clear: both; }
