--- a/c_code/e_jquery/css/src/ex_03_modal.css
+++ b/c_code/e_jquery/css/src/ex_03_modal.css
@@ -29,14 +29,18 @@
 
     /* -------------------------------- */
     .gallery_box {display: none;
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index:100; background-color: rgba(0,0,0,0.5);}
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index:1500; background-color: rgba(0,0,0,0.5);}
     .gallery_area {
       position: absolute; top: 50%; left: 50%; transform:translate(-50%, -50%);
       width: 500px; height: 300px; border-radius:0.5rem; padding:1rem; background-color: #fff; }
     .gallery_area .close {
-      position: absolute; top: -.5rem; right: -.5rem; width: 2rem; height: 2rem;}
+      position: absolute; top: -.5rem; right: -2.5rem; width: 2rem; height: 2rem;}
     .gallery_area button {width: 100%; height: 100%; border-radius: 100%; box-sizing:border-box; border:0.3rem solid #333; background-color: #fff; font-size:0.7rem;}
-    .big_img {width: 100%; height: 100%;}
+    .big_img {
+      width: 100%; height: 100%;
+      background-image: url("../../img/modal/juice_big_05.jpg");
+      background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;}
+
     .big_img p {
       position: absolute; left: 0; bottom: 0; width: 100%; height:auto; box-sizing: border-box; padding: 1rem;
       background-color:rgba(0,0,0,0.7); color:#fff;
