--- a/c_code/e_jquery/css/src/ex_03_modal.css
+++ b/c_code/e_jquery/css/src/ex_03_modal.css
@@ -21,11 +21,11 @@
         width: 100%; height: 2rem; background-color: rgba(0,0,0,0.7);
         padding-top: 1rem; color:#fff; font-weight: bold;}
 
-    .modal_01 ul li:nth-child(1) > button{ background-image: url('../../img/modal/juice_small_01.jpg');}
+    /* .modal_01 ul li:nth-child(1) > button{ background-image: url('../../img/modal/juice_small_01.jpg');}
     .modal_01 ul li:nth-child(2) > button{ background-image: url('../../img/modal/juice_small_02.jpg');}
     .modal_01 ul li:nth-child(3) > button{ background-image: url('../../img/modal/juice_small_03.jpg');}
     .modal_01 ul li:nth-child(4) > button{ background-image: url('../../img/modal/juice_small_04.jpg');}
-    .modal_01 ul li:nth-child(5) > button{ background-image: url('../../img/modal/juice_small_05.jpg');}
+    .modal_01 ul li:nth-child(5) > button{ background-image: url('../../img/modal/juice_small_05.jpg');} */
 
     /* -------------------------------- */
     .gallery_box {display: none;
