--- a/c_code/e_jquery/css/src/ex_04_onepageScroll.css
+++ b/c_code/e_jquery/css/src/ex_04_onepageScroll.css
@@ -2,13 +2,12 @@
 
 body{overflow-x: hidden;}
 
-#wrap{
-  width: 90%; min-width:60rem; height:auto; min-height:62.5rem; margin:auto; background-color: #dfdfdf;}
+#wrap{width: 90%; min-width:60rem; height:auto; min-height:62.5rem; margin:auto; background-color: #dfdfdf;}
 
 .popup_dp { position: relative;
   width: 100vw; min-width:inherit; height:auto; left:50%; transform:translateX(-50%);
   padding:1.5rem 5rem; box-sizing: border-box; background-color: #ddd;}
-  
+
 .popup_dp .close { 
   position: absolute; top: 50%; right: 2rem; width: 50px; height: 50px; 
   transform:translateY(-50%); background-color: #fff;}
@@ -18,8 +17,7 @@ body{overflow-x: hidden;}
   position: relative; left:50%; transform: translate(-50%);
   width:100vw; min-width:inherit; height:7.5rem; 
   padding:0.625rem 1.25rem; box-sizing:border-box; background-color: #fa7; }
-  h1{
-    float: left; width: 6.25rem; height: 6.25rem;  background-color: #07a; color:#fff; font-size:1.5rem;}
+  h1{float: left; width: 6.25rem; height: 6.25rem;  background-color: #07a; color:#fff; font-size:1.5rem;}
 
   #navBox{
    float:right; width: 40rem; height:3rem; margin-top:3rem;}
@@ -31,12 +29,23 @@ body{overflow-x: hidden;}
 
 
 #viewBox{
-  width:100%; height:800px; border-bottom:1px solid #07a; background-color: #479; color:#fff; font-size: 4rem;}
-#conBox_01{
-  width:100%; height:1600px; border-bottom:1px solid #07a; background-color: #fff; 
+  width:100%; height:800px; 
+  padding-top:10rem; border-bottom:1px solid #07a; background-color: #479; color:#fff; font-size: 4rem;}
+#conBox_01{ 
+  width:100%; height:1600px; 
+  padding-top:10rem; border-bottom:1px solid #07a;  background-color: #fff; 
   background-image:linear-gradient(60deg, #fa0, #acf, #fac);}
 #conBox_02{
-  width:100%; height:500px; border-bottom:1px solid #07a; 
+  width:100%; height:500px; 
+  padding-top:10rem; border-bottom:1px solid #07a; 
   background-color: #faa; margin-top: 2rem;}
-#footBox{
-  width:100%; height:300px; background-color: #333; color:#fff; padding:2rem; box-sizing: border-box;}
+
+.top_move_btn { 
+  position: fixed; right: 1rem; bottom: 3rem;
+  width: 7rem; height: 3.125rem; text-align: center; line-height: 3.125rem;
+  background-color: #333; color:#fff}
+.top_move_btn a{display: block; width: 100%; height: 100%;}
+
+#footBox{ 
+  width:100%; height:300px; padding:2rem;  padding-top:10rem; box-sizing: border-box;
+  background-color: #333; color:#fff; }
